# Inuhh-Shinvasion-2

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Main.cpp  Main.h  README.md  Test.rb  class_info.txt  mruby_build_config.rb  project.json
Shidacea/graphics/: ResourceManager.cpp  ResourceManager.h  Window.h
Shidacea/map/: Map.h  Map_Layer.cpp  Map_Layer.h
scripts/: Entity.rb  GlobalContainer.rb  Main.rb  MainLoop.rb  Scene.rb  test.rb  test2.rb
src/collisions/: Primitive.cpp  Primitive.h  Shape.cpp  Shape.h
src/core/: Coordinates.cpp  Coordinates.h  CoreEntity.cpp  CoreEntity.h  ResourceManager.cpp  ResourceManager.h  Texture.cpp  Texture.h  Window.cpp  Window.h
src/map/: Map.cpp  Tile.cpp  Tile.h
src/scripting/: Helper.cpp  Helper.h  RubyWrapper.cpp  RubyWrapper.h
